# parawrite

./: requirements.txt  scraper.py
model/: .gitignore  pyproject.toml  training.ipynb
scraping/: rappler_articles.json  requirements.txt  scraped.json
web-frontend/: .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web-frontend/src/: app.html
web-frontend/src/lib/fonts/Lora/: font.css
web-frontend/src/lib/fonts/Satisfy/: font.css
web-frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
